	  user name is a variable. 
	- Also fixed test case that didn't detect this.

Fri, 11 Jan 2008 16:16:24 +0100

	- Fixed lexer to correctly parse C quotes.

Sun, 13 Jan 2008 12:52:15 +0100

	- Changed prototype for ECPGdo because some compilers don't like
	  int/enum aliasing in there.

Mon, 14 Jan 2008 10:42:23 +0100

	- Set valid return values even in case of an error to prevent
	  segfaults.

Tue, 15 Jan 2008 11:26:14 +0100

	- Re-enabled variables in fetch/move command.
	- Set pgtypes library version to 3.0.
	- Set compat library version to 3.0.
	- Set ecpg library version to 6.0.
	- Set ecpg version to 4.4.

Wed, 06 Feb 2008 09:04:48 +0100

	- Fixed segfault in ecpg when using an array element.
	- Free all memory in auto-prepare mode.

Thu, 14 Feb 2008 13:11:34 +0100

	- Added SQLSTATE macro closing bug #3961.
	- EXECUTE can return NOT FOUND so it should be checked here too.
	- Changed regression test accordingly.

Fri, 15 Feb 2008 12:01:13 +0100

	- Changed the way symbols are defined in C in INFORMIX mode.

Sun, 17 Feb 2008 18:45:39 +0100

	- Removed duplicate include of ecpgtype.h.
	- Changed INFORMIX mode symbol definition yet again because the old
	  way didn't work on NetBSD.

Sun, 02 Mar 2008 11:50:48 +0100

	- Fixed bug that caused arrays of varchar to be output with incomplete
	  name.

Thu, 20 Mar 2008 16:54:27 +0100

	- Changed statement escaping to not escape continuation line markers.
	- Added ECPGget_PGconn() function to ecpglib, courtesy of Mike Aubury.

Tue, 25 Mar 2008 13:42:26 +0100

	- Should list ECPGget_PGconn in exports.txt.

Wed, 26 Mar 2008 17:02:08 +0100

	- Moved from PQsetdbLogin to PQconnectDB.
	- Correctly parse connect options.

Thu, 10 Apr 2008 12:42:25 +0200

	- Fixed bug in PGTYPEStimestamp_sub that used pointers instead of the
	  values to substract.
	- Set pgtypes library version to 3.1.
	- Set compat library version to 3.1.
	- Set ecpg library version to 6.2.
	- Set ecpg version to 4.5.
